dev/test on bbn & onto

--- a/result_scripts/generate_predictions_parameters.ini
+++ b/result_scripts/generate_predictions_parameters.ini
@@ -52,5 +52,175 @@ experiment_name = adapter_2_figer
 dev_or_test = both
 NativeDatasetName = figer
 NonNativeDatasetName= choi
-NonNativeDev = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_figer.json
+NonNativeDev =  /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_figer.json
 NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_figer.json
+
+
+[adapter_2_bbn_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = bbn
+experiment_name = adapter_2_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_BBN_into_Ontonotes.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_BBN_into_Ontonotes.json
+
+[adapter_2_choi_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = choi
+experiment_name = adapter_2_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_Onto.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_Onto.json
+
+[adapter_2_figer_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = figer
+experiment_name = adapter_2_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_onto.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_Onto.json
+
+[adapter_2_onto_like_choi]
+[adapter_2_onto_like_bbn]
+[adapter_2_onto_like_figer]
+
+[adapter_2_figer_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = figer
+experiment_name = adapter_2_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_BBN.json
+
+[adapter_2_choi_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = choi
+experiment_name = adapter_2_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_BBN.json
+
+[adapter_2_onto_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = ontonotes
+experiment_name = adapter_2_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_Onto_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_Ontonotes_into_BBN.json
+
+[adapter_2_bbn_like_figer]
+[adapter_2_bbn_like_choi]
+[adapter_2_bbn_like_onto]
+
+[adapter_16_bbn_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetNAme = bbn
+experiment_name = adapter_16_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_BBN_into_Ontonotes.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_BBN_into_Ontonotes.json
+
+[adapter_16_choi_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = choi
+experiment_name = adapter_16_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_Onto.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_Onto.json
+
+[adapter_16_figer_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = figer
+experiment_name = adapter_16_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_onto.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_Onto.json
+
+[adapter_16_onto_like_choi]
+[adapter_16_onto_like_bbn]
+[adapter_16_onto_like_figer]
+
+[adapter_16_figer_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = figer
+experiment_name = adapter_16_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_BBN.json
+
+[adapter_16_choi_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = choi
+experiment_name = adapter_16_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_BBN.json
+
+[adapter_16_onto_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = ontonotes
+experiment_name = adapter_16_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_Onto_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_Ontonotes_into_BBN.json
+
+[adapter_16_bbn_like_figer]
+[adapter_16_bbn_like_choi]
+[adapter_16_bbn_like_onto]
+
+[bert_ft_2_bbn_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = bbn
+experiment_name = bert_ft_2_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_BBN_into_Ontonotes.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_BBN_into_Ontonotes.json
+
+[bert_ft_2_choi_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = choi
+experiment_name = bert_ft_2_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_Onto.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_Onto.json
+
+[bert_ft_2_figer_to_onto]
+DatasetName = OntoNotes
+NativeDatasetName = ontonotes
+NonNativeDatasetName = figer
+experiment_name = bert_ft_2_onto
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_onto.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_Onto.json
+
+[bert_ft_2_onto_like_choi]
+[bert_ft_2_onto_like_bbn]
+[bert_ft_2_onto_like_figer]
+
+[bert_ft_2_figer_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = figer
+experiment_name = bert_ft_2_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_figer_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_figer_into_BBN.json
+
+[bert_ft_2_choi_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = choi
+experiment_name = bert_ft_2_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_choi_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_choi_into_BBN.json
+
+[bert_ft_2_onto_to_bbn]
+DatasetName = BBN
+NativeDatasetName = bbn
+NonNativeDatasetName = ontonotes
+experiment_name = bert_ft_2_bbn
+NonNativeDev  = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/dev_Onto_into_BBN.json
+NonNativeTest = /datahdd/vmanuel/entity_typing_all_datasets/data/entity_typing_original_datasets/mapped_datasets/test_Ontonotes_into_BBN.json
+
+[bert_ft_2_bbn_like_figer]
+[bert_ft_2_bbn_like_choi]
+[bert_ft_2_bbn_like_onto]
+
