with a pizza, i program better

--- a/train.ini
+++ b/train.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 PathModel = trained_models
 DatasetTokenizedDir = datasets_tokenized
+LightningPath = lightning_logs
 DatasetName = None
 
 MaxEpoch = 200
@@ -9,7 +10,7 @@ Patience = 5
 LearningRate = 1e-4
 MaxContextSideSize = 15
 MaxEntitySize = 11
-
+ColdStart = 10
 ClassificatorLayers = 2
 
 BertFineTuning = 0
@@ -17,7 +18,7 @@ BertFineTuning = 0
 AdapterConfig = Pfeiffer
 ReductionFactor = 0
 
-n = 5
+n = 7
 
 
 [bertFeatureExtraction_FIGER]
