improved mappings, wrote main.py, stored label2id & bugfix

--- a/test.ini
+++ b/test.ini
@@ -420,5 +420,5 @@ DatasetName = FIGER_filtered_with_Choi
 TrainingName = adapters16_Choi
 DatasetName = Choi_filtered_with_Choi
 [adapter_16_trained_on_onto_tested_on_choi_filtered_with_choi]
-TrainingName = adapters16_Choi
+TrainingName = adapters16_OntoNotes
 DatasetName = OntoNotes_filtered_with_Choi
