--- a/test.ini
+++ b/test.ini
@@ -6,7 +6,7 @@ PerformanceFile = results/performances/
 PredictionFile  = results/predictions/
 AvgStdFile      = results/avgs_stds/
 
-DevOrTest = both
+DevOrTest = test
 
 
 [bert_ft_0_trained_on_onto_tested_on_onto]
@@ -134,7 +134,7 @@ TrainingName = adapters2_BBN
 DatasetName = BBN
 
 [adapter_16_trained_on_bbn_tested_on_bbn]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = BBN
 
 [bert_ft_0_trained_on_bbn_tested_on_choi_filtered_with_bbn]
