bug fixes on filtered data performance generation

--- a/test.ini
+++ b/test.ini
@@ -22,7 +22,7 @@ TrainingName = adapters2_OntoNotes
 DatasetName = OntoNotes
 
 [adapter_16_trained_on_onto_tested_on_onto]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = OntoNotes
 
 [bert_ft_0_trained_on_onto_tested_on_bbn_filtered_with_onto]
@@ -44,34 +44,34 @@ DatasetName = BBN_filtered_with_OntoNotes
 TrainingName = adapters2_BBN
 DatasetName = BBN_filtered_with_OntoNotes
 [adapter_16_trained_on_onto_tested_on_bbn_filtered_with_onto]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = BBN_filtered_with_OntoNotes
 [adapter_16_trained_on_bbn_tested_on_bbn_filtered_with_onto]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = BBN_filtered_with_OntoNotes
 [bert_ft_0_trained_on_onto_tested_on_choi_filtered_with_onto]
 TrainingName = bertFeatureExtraction_OntoNotes
 DatasetName = Choi_filtered_with_OntoNotes
 [bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = Choi_filtered_with_OntoNotes
 [bert_ft_2_trained_on_onto_tested_on_choi_filtered_with_onto]
 TrainingName = bertFT2_OntoNotes
 DatasetName = Choi_filtered_with_OntoNotes
 [bert_ft_2_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = Choi_filtered_with_OntoNotes
 [adapter_2_trained_on_onto_tested_on_choi_filtered_with_onto]
 TrainingName = adapters2_OntoNotes
 DatasetName = Choi_filtered_with_OntoNotes
 [adapter_2_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = Choi_filtered_with_OntoNotes
 [adapter_16_trained_on_onto_tested_on_choi_filtered_with_onto]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = Choi_filtered_with_OntoNotes
 [adapter_16_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = Choi_filtered_with_OntoNotes
 [bert_ft_0_trained_on_onto_tested_on_figer_filtered_with_onto]
 TrainingName = bertFeatureExtraction_OntoNotes
@@ -92,10 +92,10 @@ DatasetName = FIGER_filtered_with_OntoNotes
 TrainingName = adapters2_FIGER
 DatasetName = FIGER_filtered_with_OntoNotes
 [adapter_16_trained_on_onto_tested_on_figer_filtered_with_onto]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = FIGER_filtered_with_OntoNotes
 [adapter_16_trained_on_figer_tested_on_figer_filtered_with_onto]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = FIGER_filtered_with_OntoNotes
 [bert_ft_0_trained_on_bbn_tested_on_onto_filtered_with_bbn]
 TrainingName = bertFeatureExtraction_BBN
@@ -116,10 +116,10 @@ DatasetName = OntoNotes_filtered_with_BBN
 TrainingName = adapters2_OntoNotes
 DatasetName = OntoNotes_filtered_with_BBN
 [adapter_16_trained_on_bbn_tested_on_onto_filtered_with_bbn]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = OntoNotes_filtered_with_BBN
 [adapter_16_trained_on_onto_tested_on_onto_filtered_with_bbn]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = OntoNotes_filtered_with_BBN
 [bert_ft_0_trained_on_bbn_tested_on_bbn]
 TrainingName = bertFeatureExtraction_BBN
@@ -141,25 +141,25 @@ DatasetName = BBN
 TrainingName = bertFeatureExtraction_BBN
 DatasetName = Choi_filtered_with_BBN
 [bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_bbn]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = Choi_filtered_with_BBN
 [bert_ft_2_trained_on_bbn_tested_on_choi_filtered_with_bbn]
 TrainingName = bertFT2_BBN
 DatasetName = Choi_filtered_with_BBN
 [bert_ft_2_trained_on_choi_tested_on_choi_filtered_with_bbn]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = Choi_filtered_with_BBN
 [adapter_2_trained_on_bbn_tested_on_choi_filtered_with_bbn]
 TrainingName = adapters2_BBN
 DatasetName = Choi_filtered_with_BBN
 [adapter_2_trained_on_choi_tested_on_choi_filtered_with_bbn]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = Choi_filtered_with_BBN
 [adapter_16_trained_on_bbn_tested_on_choi_filtered_with_bbn]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = Choi_filtered_with_BBN
 [adapter_16_trained_on_choi_tested_on_choi_filtered_with_bbn]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = Choi_filtered_with_BBN
 [bert_ft_0_trained_on_bbn_tested_on_figer_filtered_with_bbn]
 TrainingName = bertFeatureExtraction_BBN
@@ -180,98 +180,98 @@ DatasetName = FIGER_filtered_with_BBN
 TrainingName = adapters2_FIGER
 DatasetName = FIGER_filtered_with_BBN
 [adapter_16_trained_on_bbn_tested_on_figer_filtered_with_bbn]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = FIGER_filtered_with_BBN
 [adapter_16_trained_on_figer_tested_on_figer_filtered_with_bbn]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = FIGER_filtered_with_BBN
 [bert_ft_0_trained_on_choi_tested_on_onto_filtered_with_choi]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = OntoNotes_filtered_with_Choi
 [bert_ft_0_trained_on_onto_tested_on_onto_filtered_with_choi]
 TrainingName = bertFeatureExtraction_OntoNotes
 DatasetName = OntoNotes_filtered_with_Choi
 [bert_ft_2_trained_on_choi_tested_on_onto_filtered_with_choi]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = OntoNotes_filtered_with_Choi
 [bert_ft_2_trained_on_onto_tested_on_onto_filtered_with_choi]
 TrainingName = bertFT2_OntoNotes
 DatasetName = OntoNotes_filtered_with_Choi
 [adapter_2_trained_on_choi_tested_on_onto_filtered_with_choi]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = OntoNotes_filtered_with_Choi
 [adapter_2_trained_on_onto_tested_on_onto_filtered_with_choi]
 TrainingName = adapters2_OntoNotes
 DatasetName = OntoNotes_filtered_with_Choi
 [adapter_16_trained_on_choi_tested_on_onto_filtered_with_choi]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = OntoNotes_filtered_with_Choi
 [adapter_16_trained_on_onto_tested_on_onto_filtered_with_choi]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = OntoNotes_filtered_with_Choi
 [bert_ft_0_trained_on_choi_tested_on_bbn_filtered_with_choi]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = BBN_filtered_with_Choi
 [bert_ft_0_trained_on_bbn_tested_on_bbn_filtered_with_choi]
 TrainingName = bertFeatureExtraction_BBN
 DatasetName = BBN_filtered_with_Choi
 [bert_ft_2_trained_on_choi_tested_on_bbn_filtered_with_choi]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = BBN_filtered_with_Choi
 [bert_ft_2_trained_on_bbn_tested_on_bbn_filtered_with_choi]
 TrainingName = bertFT2_BBN
 DatasetName = BBN_filtered_with_Choi
 [adapter_2_trained_on_choi_tested_on_bbn_filtered_with_choi]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = BBN_filtered_with_Choi
 [adapter_2_trained_on_bbn_tested_on_bbn_filtered_with_choi]
 TrainingName = adapters2_BBN
 DatasetName = BBN_filtered_with_Choi
 [adapter_16_trained_on_choi_tested_on_bbn_filtered_with_choi]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = BBN_filtered_with_Choi
 [adapter_16_trained_on_bbn_tested_on_bbn_filtered_with_choi]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = BBN_filtered_with_Choi
 [bert_ft_0_trained_on_choi_tested_on_choi]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = Choi
 
 [bert_ft_2_trained_on_choi_tested_on_choi]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = Choi
 
 [adapter_2_trained_on_choi_tested_on_choi]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = Choi
 
 [adapter_16_trained_on_choi_tested_on_choi]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = Choi
 
 [bert_ft_0_trained_on_choi_tested_on_figer_filtered_with_choi]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = FIGER_filtered_with_Choi
 [bert_ft_0_trained_on_figer_tested_on_figer_filtered_with_choi]
 TrainingName = bertFeatureExtraction_FIGER
 DatasetName = FIGER_filtered_with_Choi
 [bert_ft_2_trained_on_choi_tested_on_figer_filtered_with_choi]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = FIGER_filtered_with_Choi
 [bert_ft_2_trained_on_figer_tested_on_figer_filtered_with_choi]
 TrainingName = bertFT2_FIGER
 DatasetName = FIGER_filtered_with_Choi
 [adapter_2_trained_on_choi_tested_on_figer_filtered_with_choi]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = FIGER_filtered_with_Choi
 [adapter_2_trained_on_figer_tested_on_figer_filtered_with_choi]
 TrainingName = adapters2_FIGER
 DatasetName = FIGER_filtered_with_Choi
 [adapter_16_trained_on_choi_tested_on_figer_filtered_with_choi]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = FIGER_filtered_with_Choi
 [adapter_16_trained_on_figer_tested_on_figer_filtered_with_choi]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = FIGER_filtered_with_Choi
 [bert_ft_0_trained_on_figer_tested_on_onto_filtered_with_figer]
 TrainingName = bertFeatureExtraction_FIGER
@@ -292,10 +292,10 @@ DatasetName = OntoNotes_filtered_with_FIGER
 TrainingName = adapters2_OntoNotes
 DatasetName = OntoNotes_filtered_with_FIGER
 [adapter_16_trained_on_figer_tested_on_onto_filtered_with_figer]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = OntoNotes_filtered_with_FIGER
 [adapter_16_trained_on_onto_tested_on_onto_filtered_with_figer]
-TrainingName = adapter16_OntoNotes
+TrainingName = adapters16_OntoNotes
 DatasetName = OntoNotes_filtered_with_FIGER
 [bert_ft_0_trained_on_figer_tested_on_bbn_filtered_with_figer]
 TrainingName = bertFeatureExtraction_FIGER
@@ -316,34 +316,34 @@ DatasetName = BBN_filtered_with_FIGER
 TrainingName = adapters2_BBN
 DatasetName = BBN_filtered_with_FIGER
 [adapter_16_trained_on_figer_tested_on_bbn_filtered_with_figer]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = BBN_filtered_with_FIGER
 [adapter_16_trained_on_bbn_tested_on_bbn_filtered_with_figer]
-TrainingName = adapter16_BBN
+TrainingName = adapters16_BBN
 DatasetName = BBN_filtered_with_FIGER
 [bert_ft_0_trained_on_figer_tested_on_choi_filtered_with_figer]
 TrainingName = bertFeatureExtraction_FIGER
 DatasetName = Choi_filtered_with_FIGER
 [bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_figer]
-TrainingName = bertFeatureExtraction_Choi
+TrainingName = bertFeatureExtraction_choi
 DatasetName = Choi_filtered_with_FIGER
 [bert_ft_2_trained_on_figer_tested_on_choi_filtered_with_figer]
 TrainingName = bertFT2_FIGER
 DatasetName = Choi_filtered_with_FIGER
 [bert_ft_2_trained_on_choi_tested_on_choi_filtered_with_figer]
-TrainingName = bertFT2_Choi
+TrainingName = bertFT2_choi
 DatasetName = Choi_filtered_with_FIGER
 [adapter_2_trained_on_figer_tested_on_choi_filtered_with_figer]
 TrainingName = adapters2_FIGER
 DatasetName = Choi_filtered_with_FIGER
 [adapter_2_trained_on_choi_tested_on_choi_filtered_with_figer]
-TrainingName = adapters2_Choi
+TrainingName = adapters2_choi
 DatasetName = Choi_filtered_with_FIGER
 [adapter_16_trained_on_figer_tested_on_choi_filtered_with_figer]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = Choi_filtered_with_FIGER
 [adapter_16_trained_on_choi_tested_on_choi_filtered_with_figer]
-TrainingName = adapter16_Choi
+TrainingName = adapters16_choi
 DatasetName = Choi_filtered_with_FIGER
 [bert_ft_0_trained_on_figer_tested_on_figer]
 TrainingName = bertFeatureExtraction_FIGER
@@ -358,6 +358,6 @@ TrainingName = adapters2_FIGER
 DatasetName = FIGER
 
 [adapter_16_trained_on_figer_tested_on_figer]
-TrainingName = adapter16_FIGER
+TrainingName = adapters16_FIGER
 DatasetName = FIGER
 
