--- a/train.ini
+++ b/train.ini
@@ -94,26 +94,26 @@ DatasetName = OntoNotes
 ReductionFactor = 16
 
 
-[bertFeatureExtraction_Choi]
+[bertFeatureExtraction_choi]
 DatasetName = Choi
-[bertFT1_Choi]
+[bertFT1_choi]
 DatasetName = Choi
 BertFineTuning = 1
-[bertFT2_Choi]
+[bertFT2_choi]
 DatasetName = Choi
 BertFineTuning = 2
-[adapters1_Choi]
+[adapters1_choi]
 DatasetName = Choi
 ReductionFactor = 1
-[adapters2_Choi]
+[adapters2_choi]
 DatasetName = Choi
 ReductionFactor = 2
-[adapters4_Choi]
+[adapters4_choi]
 DatasetName = Choi
 ReductionFactor = 4
-[adapters8_Choi]
+[adapters8_choi]
 DatasetName = Choi
 ReductionFactor = 8
-[adapters16_Choi]
+[adapters16_choi]
 DatasetName = Choi
 ReductionFactor = 16
