bugfix on training skipping

--- a/train.ini
+++ b/train.ini
@@ -3,7 +3,7 @@ PathModel = trained_models
 LightningPath = lightning_logs
 DatasetName = None
 
-MaxEpoch = 200
+MaxEpochs = 200
 BatchSize = 256
 Patience = 5
 LearningRate = 1e-4
@@ -17,7 +17,7 @@ BertFineTuning = 0
 AdapterConfig = Pfeiffer
 ReductionFactor = 0
 
-n = 5
+n = 7
 
 [bertFeatureExtraction_FIGER]
 DatasetName = FIGER
