--- a/train.ini
+++ b/train.ini
@@ -10,6 +10,7 @@ LearningRate = 1e-4
 MaxContextSideSize = 15
 MaxEntitySize = 11
 ColdStart = 10
+LimitValBatches = 1
 ClassificatorLayers = 2
 
 BertFineTuning = 0
@@ -96,24 +97,40 @@ ReductionFactor = 16
 
 [bertFeatureExtraction_choi]
 DatasetName = Choi
+LimitValBatches = 0.25
+ColdStart = 70
 [bertFT1_choi]
 DatasetName = Choi
 BertFineTuning = 1
+LimitValBatches = 0.25
+ColdStart = 70
 [bertFT2_choi]
 DatasetName = Choi
 BertFineTuning = 2
+LimitValBatches = 0.25
+ColdStart = 70
 [adapters1_choi]
 DatasetName = Choi
 ReductionFactor = 1
+LimitValBatches = 0.25
+ColdStart = 70
 [adapters2_choi]
 DatasetName = Choi
 ReductionFactor = 2
+LimitValBatches = 0.25
+ColdStart = 70
 [adapters4_choi]
 DatasetName = Choi
 ReductionFactor = 4
+LimitValBatches = 0.25
+ColdStart = 70
 [adapters8_choi]
 DatasetName = Choi
 ReductionFactor = 8
+LimitValBatches = 0.25
+ColdStart = 70
 [adapters16_choi]
 DatasetName = Choi
 ReductionFactor = 16
+LimitValBatches = 0.25
+ColdStart = 70
