added the discounted macro classes and the at least macro classes

--- a/data.ini
+++ b/data.ini
@@ -2,7 +2,7 @@
 Train = None
 Dev   = None
 Test  = None
-TokenizedDir = datasets_tokenized
+TokenizedDir = official_datasets_tokenized
 
 
 [FIGER]
