--- a/train.ini
+++ b/train.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-PathModel = trained_models
+PathModel = ../../fmoiraghi/HDD/adapter_on_entity_typing/trained_models
 LightningPath = lightning_logs
 DatasetName = None
 
