--- a/test.ini
+++ b/test.ini
@@ -1,148 +1,150 @@
 [DEFAULT]
 TrainingName = DEFAULT
-DatasetName    = DEFAULT
+DatasetName  = DEFAULT
 
-PerformanceFile = results/performances/
-PredictionFile  = results/predictions/
-AvgStdFile      = results/avgs_stds/
+PerformanceFile = official_results/performances/
+PredictionFile  = official_results/predictions/
+AvgStdFile      = official_results/avgs_stds/
 
 DevOrTest = test
 
 
-[bert_ft_0_trained_on_onto_tested_on_onto]
-TrainingName = bertFeatureExtraction_OntoNotes
-DatasetName = OntoNotes
+; [bert_ft_0_trained_on_onto_tested_on_onto]
+; TrainingName = bertFeatureExtraction_OntoNotes
+; DatasetName = OntoNotes
 
-[bert_ft_2_trained_on_onto_tested_on_onto]
-TrainingName = bertFT2_OntoNotes
-DatasetName = OntoNotes
+; [bert_ft_2_trained_on_onto_tested_on_onto]
+; TrainingName = bertFT2_OntoNotes
+; DatasetName = OntoNotes
 
-[adapter_2_trained_on_onto_tested_on_onto]
-TrainingName = adapters2_OntoNotes
-DatasetName = OntoNotes
+; [adapter_2_trained_on_onto_tested_on_onto]
+; TrainingName = adapters2_OntoNotes
+; DatasetName = OntoNotes
 
-[adapter_16_trained_on_onto_tested_on_onto]
-TrainingName = adapters16_OntoNotes
-DatasetName = OntoNotes
+; [adapter_16_trained_on_onto_tested_on_onto]
+; TrainingName = adapters16_OntoNotes
+; DatasetName = OntoNotes
 
-[bert_ft_0_trained_on_onto_tested_on_bbn_filtered_with_onto]
-TrainingName = bertFeatureExtraction_OntoNotes
-DatasetName = BBN_filtered_with_OntoNotes
-[bert_ft_0_trained_on_bbn_tested_on_bbn_filtered_with_onto]
-TrainingName = bertFeatureExtraction_BBN
-DatasetName = BBN_filtered_with_OntoNotes
-[bert_ft_2_trained_on_onto_tested_on_bbn_filtered_with_onto]
-TrainingName = bertFT2_OntoNotes
-DatasetName = BBN_filtered_with_OntoNotes
-[bert_ft_2_trained_on_bbn_tested_on_bbn_filtered_with_onto]
-TrainingName = bertFT2_BBN
-DatasetName = BBN_filtered_with_OntoNotes
-[adapter_2_trained_on_onto_tested_on_bbn_filtered_with_onto]
-TrainingName = adapters2_OntoNotes
-DatasetName = BBN_filtered_with_OntoNotes
-[adapter_2_trained_on_bbn_tested_on_bbn_filtered_with_onto]
-TrainingName = adapters2_BBN
-DatasetName = BBN_filtered_with_OntoNotes
-[adapter_16_trained_on_onto_tested_on_bbn_filtered_with_onto]
-TrainingName = adapters16_OntoNotes
-DatasetName = BBN_filtered_with_OntoNotes
-[adapter_16_trained_on_bbn_tested_on_bbn_filtered_with_onto]
-TrainingName = adapters16_BBN
-DatasetName = BBN_filtered_with_OntoNotes
-[bert_ft_0_trained_on_onto_tested_on_choi_filtered_with_onto]
-TrainingName = bertFeatureExtraction_OntoNotes
-DatasetName = Choi_filtered_with_OntoNotes
-[bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = bertFeatureExtraction_choi
-DatasetName = Choi_filtered_with_OntoNotes
-[bert_ft_2_trained_on_onto_tested_on_choi_filtered_with_onto]
-TrainingName = bertFT2_OntoNotes
-DatasetName = Choi_filtered_with_OntoNotes
-[bert_ft_2_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = bertFT2_choi
-DatasetName = Choi_filtered_with_OntoNotes
-[adapter_2_trained_on_onto_tested_on_choi_filtered_with_onto]
-TrainingName = adapters2_OntoNotes
-DatasetName = Choi_filtered_with_OntoNotes
-[adapter_2_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = adapters2_choi
-DatasetName = Choi_filtered_with_OntoNotes
-[adapter_16_trained_on_onto_tested_on_choi_filtered_with_onto]
-TrainingName = adapters16_OntoNotes
-DatasetName = Choi_filtered_with_OntoNotes
-[adapter_16_trained_on_choi_tested_on_choi_filtered_with_onto]
-TrainingName = adapters16_choi
-DatasetName = Choi_filtered_with_OntoNotes
-[bert_ft_0_trained_on_onto_tested_on_figer_filtered_with_onto]
-TrainingName = bertFeatureExtraction_OntoNotes
-DatasetName = FIGER_filtered_with_OntoNotes
-[bert_ft_0_trained_on_figer_tested_on_figer_filtered_with_onto]
-TrainingName = bertFeatureExtraction_FIGER
-DatasetName = FIGER_filtered_with_OntoNotes
-[bert_ft_2_trained_on_onto_tested_on_figer_filtered_with_onto]
-TrainingName = bertFT2_OntoNotes
-DatasetName = FIGER_filtered_with_OntoNotes
-[bert_ft_2_trained_on_figer_tested_on_figer_filtered_with_onto]
-TrainingName = bertFT2_FIGER
-DatasetName = FIGER_filtered_with_OntoNotes
-[adapter_2_trained_on_onto_tested_on_figer_filtered_with_onto]
-TrainingName = adapters2_OntoNotes
-DatasetName = FIGER_filtered_with_OntoNotes
-[adapter_2_trained_on_figer_tested_on_figer_filtered_with_onto]
-TrainingName = adapters2_FIGER
-DatasetName = FIGER_filtered_with_OntoNotes
-[adapter_16_trained_on_onto_tested_on_figer_filtered_with_onto]
-TrainingName = adapters16_OntoNotes
-DatasetName = FIGER_filtered_with_OntoNotes
-[adapter_16_trained_on_figer_tested_on_figer_filtered_with_onto]
-TrainingName = adapters16_FIGER
-DatasetName = FIGER_filtered_with_OntoNotes
-[bert_ft_0_trained_on_bbn_tested_on_onto_filtered_with_bbn]
-TrainingName = bertFeatureExtraction_BBN
-DatasetName = OntoNotes_filtered_with_BBN
-[bert_ft_0_trained_on_onto_tested_on_onto_filtered_with_bbn]
-TrainingName = bertFeatureExtraction_OntoNotes
-DatasetName = OntoNotes_filtered_with_BBN
-[bert_ft_2_trained_on_bbn_tested_on_onto_filtered_with_bbn]
-TrainingName = bertFT2_BBN
-DatasetName = OntoNotes_filtered_with_BBN
-[bert_ft_2_trained_on_onto_tested_on_onto_filtered_with_bbn]
-TrainingName = bertFT2_OntoNotes
-DatasetName = OntoNotes_filtered_with_BBN
-[adapter_2_trained_on_bbn_tested_on_onto_filtered_with_bbn]
-TrainingName = adapters2_BBN
-DatasetName = OntoNotes_filtered_with_BBN
-[adapter_2_trained_on_onto_tested_on_onto_filtered_with_bbn]
-TrainingName = adapters2_OntoNotes
-DatasetName = OntoNotes_filtered_with_BBN
-[adapter_16_trained_on_bbn_tested_on_onto_filtered_with_bbn]
-TrainingName = adapters16_BBN
-DatasetName = OntoNotes_filtered_with_BBN
-[adapter_16_trained_on_onto_tested_on_onto_filtered_with_bbn]
-TrainingName = adapters16_OntoNotes
-DatasetName = OntoNotes_filtered_with_BBN
-[bert_ft_0_trained_on_bbn_tested_on_bbn]
-TrainingName = bertFeatureExtraction_BBN
-DatasetName = BBN
+; [bert_ft_0_trained_on_onto_tested_on_bbn_filtered_with_onto]
+; TrainingName = bertFeatureExtraction_OntoNotes
+; DatasetName = BBN_filtered_with_OntoNotes
+; [bert_ft_0_trained_on_bbn_tested_on_bbn_filtered_with_onto]
+; TrainingName = bertFeatureExtraction_BBN
+; DatasetName = BBN_filtered_with_OntoNotes
+; [bert_ft_2_trained_on_onto_tested_on_bbn_filtered_with_onto]
+; TrainingName = bertFT2_OntoNotes
+; DatasetName = BBN_filtered_with_OntoNotes
+; [bert_ft_2_trained_on_bbn_tested_on_bbn_filtered_with_onto]
+; TrainingName = bertFT2_BBN
+; DatasetName = BBN_filtered_with_OntoNotes
+; [adapter_2_trained_on_onto_tested_on_bbn_filtered_with_onto]
+; TrainingName = adapters2_OntoNotes
+; DatasetName = BBN_filtered_with_OntoNotes
+; [adapter_2_trained_on_bbn_tested_on_bbn_filtered_with_onto]
+; TrainingName = adapters2_BBN
+; DatasetName = BBN_filtered_with_OntoNotes
+; [adapter_16_trained_on_onto_tested_on_bbn_filtered_with_onto]
+; TrainingName = adapters16_OntoNotes
+; DatasetName = BBN_filtered_with_OntoNotes
+; [adapter_16_trained_on_bbn_tested_on_bbn_filtered_with_onto]
+; TrainingName = adapters16_BBN
+; DatasetName = BBN_filtered_with_OntoNotes
+; [bert_ft_0_trained_on_onto_tested_on_choi_filtered_with_onto]
+; TrainingName = bertFeatureExtraction_OntoNotes
+; DatasetName = Choi_filtered_with_OntoNotes
+; [bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_onto]
+; TrainingName = bertFeatureExtraction_choi
+; DatasetName = Choi_filtered_with_OntoNotes
+; [bert_ft_2_trained_on_onto_tested_on_choi_filtered_with_onto]
+; TrainingName = bertFT2_OntoNotes
+; DatasetName = Choi_filtered_with_OntoNotes
+; [bert_ft_2_trained_on_choi_tested_on_choi_filtered_with_onto]
+; TrainingName = bertFT2_choi
+; DatasetName = Choi_filtered_with_OntoNotes
+; [adapter_2_trained_on_onto_tested_on_choi_filtered_with_onto]
+; TrainingName = adapters2_OntoNotes
+; DatasetName = Choi_filtered_with_OntoNotes
+; [adapter_2_trained_on_choi_tested_on_choi_filtered_with_onto]
+; TrainingName = adapters2_choi
+; DatasetName = Choi_filtered_with_OntoNotes
+; [adapter_16_trained_on_onto_tested_on_choi_filtered_with_onto]
+; TrainingName = adapters16_OntoNotes
+; DatasetName = Choi_filtered_with_OntoNotes
+; [adapter_16_trained_on_choi_tested_on_choi_filtered_with_onto]
+; TrainingName = adapters16_choi
+; DatasetName = Choi_filtered_with_OntoNotes
+; [bert_ft_0_trained_on_onto_tested_on_figer_filtered_with_onto]
+; TrainingName = bertFeatureExtraction_OntoNotes
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [bert_ft_0_trained_on_figer_tested_on_figer_filtered_with_onto]
+; TrainingName = bertFeatureExtraction_FIGER
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [bert_ft_2_trained_on_onto_tested_on_figer_filtered_with_onto]
+; TrainingName = bertFT2_OntoNotes
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [bert_ft_2_trained_on_figer_tested_on_figer_filtered_with_onto]
+; TrainingName = bertFT2_FIGER
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [adapter_2_trained_on_onto_tested_on_figer_filtered_with_onto]
+; TrainingName = adapters2_OntoNotes
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [adapter_2_trained_on_figer_tested_on_figer_filtered_with_onto]
+; TrainingName = adapters2_FIGER
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [adapter_16_trained_on_onto_tested_on_figer_filtered_with_onto]
+; TrainingName = adapters16_OntoNotes
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [adapter_16_trained_on_figer_tested_on_figer_filtered_with_onto]
+; TrainingName = adapters16_FIGER
+; DatasetName = FIGER_filtered_with_OntoNotes
+; [bert_ft_0_trained_on_bbn_tested_on_onto_filtered_with_bbn]
+; TrainingName = bertFeatureExtraction_BBN
+; DatasetName = OntoNotes_filtered_with_BBN
+; [bert_ft_0_trained_on_onto_tested_on_onto_filtered_with_bbn]
+; TrainingName = bertFeatureExtraction_OntoNotes
+; DatasetName = OntoNotes_filtered_with_BBN
+; [bert_ft_2_trained_on_bbn_tested_on_onto_filtered_with_bbn]
+; TrainingName = bertFT2_BBN
+; DatasetName = OntoNotes_filtered_with_BBN
+; [bert_ft_2_trained_on_onto_tested_on_onto_filtered_with_bbn]
+; TrainingName = bertFT2_OntoNotes
+; DatasetName = OntoNotes_filtered_with_BBN
+; [adapter_2_trained_on_bbn_tested_on_onto_filtered_with_bbn]
+; TrainingName = adapters2_BBN
+; DatasetName = OntoNotes_filtered_with_BBN
+; [adapter_2_trained_on_onto_tested_on_onto_filtered_with_bbn]
+; TrainingName = adapters2_OntoNotes
+; DatasetName = OntoNotes_filtered_with_BBN
+; [adapter_16_trained_on_bbn_tested_on_onto_filtered_with_bbn]
+; TrainingName = adapters16_BBN
+; DatasetName = OntoNotes_filtered_with_BBN
+; [adapter_16_trained_on_onto_tested_on_onto_filtered_with_bbn]
+; TrainingName = adapters16_OntoNotes
+; DatasetName = OntoNotes_filtered_with_BBN
 
-[bert_ft_2_trained_on_bbn_tested_on_bbn]
-TrainingName = bertFT2_BBN
-DatasetName = BBN
+; [bert_ft_0_trained_on_bbn_tested_on_bbn]
+; TrainingName = bertFeatureExtraction_BBN
+; DatasetName = BBN
 
-[adapter_2_trained_on_bbn_tested_on_bbn]
-TrainingName = adapters2_BBN
-DatasetName = BBN
+; [bert_ft_2_trained_on_bbn_tested_on_bbn]
+; TrainingName = bertFT2_BBN
+; DatasetName = BBN
 
-[adapter_16_trained_on_bbn_tested_on_bbn]
-TrainingName = adapters16_BBN
-DatasetName = BBN
+; [adapter_2_trained_on_bbn_tested_on_bbn]
+; TrainingName = adapters2_BBN
+; DatasetName = BBN
 
-[bert_ft_0_trained_on_bbn_tested_on_choi_filtered_with_bbn]
-TrainingName = bertFeatureExtraction_BBN
-DatasetName = Choi_filtered_with_BBN
-[bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_bbn]
-TrainingName = bertFeatureExtraction_choi
-DatasetName = Choi_filtered_with_BBN
+; [adapter_16_trained_on_bbn_tested_on_bbn]
+; TrainingName = adapters16_BBN
+; DatasetName = BBN
+
+; [bert_ft_0_trained_on_bbn_tested_on_choi_filtered_with_bbn]
+; TrainingName = bertFeatureExtraction_BBN
+; DatasetName = Choi_filtered_with_BBN
+; [bert_ft_0_trained_on_choi_tested_on_choi_filtered_with_bbn]
+; TrainingName = bertFeatureExtraction_choi
+; DatasetName = Choi_filtered_with_BBN
+
 [bert_ft_2_trained_on_bbn_tested_on_choi_filtered_with_bbn]
 TrainingName = bertFT2_BBN
 DatasetName = Choi_filtered_with_BBN
