tests with distilbert and optimization on macro types

--- a/train.ini
+++ b/train.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
-PathModel = ../../fmoiraghi/HDD/adapter_on_entity_typing/trained_models
-LightningPath = lightning_logs
+PathModel = trained_models/distilbert-macro-types-as-optimizer
+LightningPath = optimize_macro_t_lightning_logs
 DatasetName = None
 
 MaxEpochs = 200
@@ -18,7 +18,7 @@ BertFineTuning = 0
 AdapterConfig = Pfeiffer
 ReductionFactor = 0
 
-n = 7
+n = 3
 
 [bertFeatureExtraction_FIGER]
 DatasetName = FIGER
