from scratch figer trained

--- a/parameters/domain_adaptation_test_s_figer.ini
+++ b/parameters/domain_adaptation_test_s_figer.ini
@@ -573,36 +573,36 @@ AvgStdFile      = domain_adaptation_results/avgs_stds/
 ; SampleSize =  2000
 
 [from_scratch_figer_k20]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  20
 
 [from_scratch_figer_k50]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  50
 
 [from_scratch_figer_k100]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  100
 
 [from_scratch_figer_k200]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  200
 
 [from_scratch_figer_k500]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  500
 
 [from_scratch_figer_k1000]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  1000
 
 [from_scratch_figer_k2000]
-TrainingName = from_scratch_figer
+TrainingName = from_scratch_FIGER
 DatasetName = FIGER
 SampleSize =  2000
