--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+wheel
+Cython
+numpy
 packaging == 20.9
 datasets == 1.5
 torch  == 1.6.0
-adapter-transformers
+adapter-transformers == 1.1.1
 git+https://github.com/NooneBug/typing-model
-pytorch-lightning
+pytorch-lightning == 1.2.1
